<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/tituloAplicacion"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/opcion1"

        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="mispinner"
        android:text="@string/opcion5" />

    <Button
        android:id="@+id/button02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="mitabhost"
        android:text="@string/opcion2" />

    <Button
        android:id="@+id/button04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/opcion3"
        android:onClick="manipulacion"
        />

    <Button
        android:id="@+id/button03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/opcion4"
        android:onClick="myrecycler"/>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/dialogo"
        android:onClick="dialogo"/>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/Acercade"
        android:onClick="AcercaDe"/>
    <Button
        android:id="@+id/button05"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Salir"
        android:onClick="salir"/>
</LinearLayout>
